data/derived/comb/progs/unify/prog7992.ml.out
Characters 53-54:
  let fixpoint (f,b) = wwhile(if true then b else f b, b);;
                                                       ^
Error: This expression has type ('a -> 'a * bool) * 'a
       but an expression was expected of type 'a
       The type variable 'a occurs inside ('a -> 'a * bool) * 'a
